Fixed image distortion.

--- a/src/app.scss
+++ b/src/app.scss
@@ -18,7 +18,7 @@
   @extend .pb-2,
 }
 
-.columns>.column>* {
+.columns>.column>*:not(img) {
   max-height: 100%;
   height: 100%;
 }
